# DecibelServer

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/workflows/: platform_builds.yaml
cmake/: conan.cmake  msvc.runsettings.in  utils.cmake
src/: CMakeLists.txt  ClientInfo.cpp  ClientInfo.h  MessageType.cpp  MessageType.hpp  main.cpp  server.cpp  server.hpp  server.py  uuid.cpp  uuid.hpp
test/: CMakeLists.txt  client_info.cpp  conanfile.txt  mock_server.cpp  mock_server.hpp  test_client_info.hpp  test_message_type.hpp  test_server_messages_position.hpp  test_uuid.hpp  tests_main.cpp
